# linear-algebra

./: .gitignore  LICENSE  README.md  dune-project  linear_algebra.opam
lib/: dune  matrix.ml  matrix.mli  vector.ml  vector.mli
test/: dune  test_matrix.ml  test_vector.ml
